ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/whitelist-source-range: "0.0.0.0/0"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - "kibana.local"
    secretName: kibana-cert
  rules:
  - host: "kibana.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kibana-svc
            port:
              number: 5601
